@@ -8,6 +8,7 @@
 <li>Fix the article view scrolling problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&amp;t=20814</li>
 <li>Fix the mark all read bug on Snow Leopard reported at http://forums.cocoaforge.com/viewtopic.php?f=18&amp;t=20877</li>
 <li>Eliminate deprecated method warnings on Snow Leopard.</li>
+<li>Eliminate drawing artifacts in Folders and Articles headers. (Patch from Dan Crosta)</li>
 </ul>
 </body>
 </html>
